# tideway-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CORS.md  Cargo.toml  DX_IMPLEMENTATION_PLAN_2026-03-11.md  DX_RESEARCH_2026-03-11.md  NEXT_STEPS.md  README.md  ROADMAP_2026_DX.md  ROADMAP_2026_DX_EXECUTION.md  SKILLS.md
.cargo/: audit.toml
.github/: RELEASE_TEMPLATE.md
benches/: BASELINE.md  README.md  hot_paths.rs  overhead.rs
ci/: public-api-surface.txt
docs/: admin.md  advanced_composition.md  auth.md  background_jobs.md  billing.md  caching.md  cli.md  credits.md  database_traits.md  dependency_injection.md  deprecation_policy.md  dx_metrics_snapshot.md  email.md  error_handling.md  error_recovery.md  getting_started.md  maintainer_verify.md  module_contracts.md  openapi.md  organizations.md  production_readiness.md  rate_limiting.md  request_logging.md  sessions.md  (+6 more)
load-tests/app/: Cargo.toml
load-tests/app/src/: main.rs
tests/fixtures/downstream_upgrade/: Cargo.toml
tests/fixtures/downstream_upgrade/src/: lib.rs
tideway-cli/: Cargo.toml  README.md  build.rs
tideway-cli/src/: cli.rs  database.rs  env.rs  lib.rs  main.rs  plan.rs
tideway-cli/src/commands/: add.rs  app_builder.rs  backend.rs  dev.rs  doctor.rs  file_ops.rs  generate.rs  init.rs  messaging.rs  migrate.rs  migration_naming.rs  mod.rs  new.rs  resource.rs  setup.rs  templates.rs
tideway-cli/src/commands/dev/: watch.rs
tideway-cli/src/templates/: mod.rs
tideway-cli/src/templates_inline/views/auth/: ForgotPasswordView.vue  LoginView.vue  MfaView.vue  RegisterView.vue  ResetPasswordView.vue
tideway-cli/src/templates_inline/views/billing/: BillingView.vue
tideway-cli/src/templates_inline/views/settings/: MembersView.vue  OrganizationSettingsView.vue
tideway-cli/templates/backend/admin/: mod.hbs  routes.hbs
tideway-cli/templates/backend/auth/: actor.hbs  mod.hbs  routes.hbs  store.hbs  tests.hbs
tideway-cli/templates/backend/billing/: events.hbs  mod.hbs  routes.hbs
tideway-cli/templates/backend/entities/: membership.hbs  mod.hbs  organization.hbs  organization_invitation.hbs  organization_member.hbs  prelude.hbs  refresh_token_family.hbs  user.hbs  verification_token.hbs
tideway-cli/templates/backend/migrations/: lib.hbs  m001_create_users.hbs  m002_create_refresh_token_families.hbs  m003_create_verification_tokens.hbs  m004_create_billing.hbs  m005_add_admin_flag.hbs  m005_create_organizations.hbs  m006_create_memberships.hbs  m006_create_organization_members.hbs  m007_add_admin_flag.hbs  m008_create_billing_plans.hbs  m009_create_webhook_processed_events.hbs  m010_create_billing_processed_events.hbs  m011_create_organization_invitations.hbs  m012_add_webhook_claim_lifecycle.hbs  m013_create_credit_ledger.hbs  m014_repair_billing_customers.hbs
tideway-cli/templates/backend/organizations/: invitations.hbs  mod.hbs  routes.hbs
tideway-cli/templates/backend/shared/: config.hbs  email.hbs  env_example.hbs  error.hbs  lib.hbs  main.hbs
tideway-cli/templates/backend/starter/: Cargo.toml.hbs  docker-compose.hbs  env_example.hbs  github-ci.hbs  gitignore.hbs
tideway-cli/templates/backend/starter/migration/: Cargo.toml.hbs
tideway-cli/templates/backend/starter/migration/src/: lib.rs.hbs  m001_create_users.rs.hbs  m002_create_refresh_token_families.rs.hbs  m003_create_auth_tokens.rs.hbs  m004_create_mfa.rs.hbs
tideway-cli/templates/backend/starter/src/: config.rs.hbs  error.rs.hbs  main.rs.hbs  openapi_docs.rs.hbs
tideway-cli/templates/backend/starter/src/auth/: mod.rs.hbs  provider.rs.hbs  routes.rs.hbs  store.rs.hbs  tests.rs.hbs
tideway-cli/templates/backend/starter/src/entities/: auth_token.rs.hbs  mfa_backup_code.rs.hbs  mod.rs.hbs  refresh_token_family.rs.hbs  user.rs.hbs
tideway-cli/templates/backend/starter/src/routes/: mod.rs.hbs
tideway-cli/templates/vue/admin/: AdminDashboard.shadcn.hbs  ImpersonationBanner.shadcn.hbs  OrganizationDetail.shadcn.hbs  OrganizationList.shadcn.hbs  UserDetail.shadcn.hbs  UserList.shadcn.hbs
tideway-cli/templates/vue/admin/composables/: useAdmin.shadcn.hbs
tideway-cli/templates/vue/auth/: ForgotPassword.shadcn.hbs  LoginForm.shadcn.hbs  MfaVerify.shadcn.hbs  RegisterForm.shadcn.hbs  ResetPassword.shadcn.hbs
tideway-cli/templates/vue/auth/composables/: useAuth.shadcn.hbs
tideway-cli/templates/vue/billing/: BillingPortalButton.shadcn.hbs  CheckoutButton.shadcn.hbs  DowngradeWarning.shadcn.hbs  InvoiceHistory.shadcn.hbs  PlanComparison.shadcn.hbs  PlanExportImport.shadcn.hbs  PlanForm.shadcn.hbs  PlanList.shadcn.hbs  PlanSelector.shadcn.hbs  PricingTable.shadcn.hbs  SubscriptionStatus.shadcn.hbs  UpgradeSuggestions.shadcn.hbs  UsageDashboard.shadcn.hbs  UsageHistory.shadcn.hbs
tideway-cli/templates/vue/billing/composables/: useBilling.shadcn.hbs  usePlanComparison.shadcn.hbs  usePlans.shadcn.hbs  useUsage.shadcn.hbs
tideway-cli/templates/vue/organizations/: AcceptInvitation.shadcn.hbs  InviteMember.shadcn.hbs  MemberList.shadcn.hbs  OrgSettings.shadcn.hbs  OrgSwitcher.shadcn.hbs
tideway-cli/templates/vue/organizations/composables/: useOrganization.shadcn.hbs
tideway-cli/templates/vue/shared/composables/: useApi.shadcn.hbs
tideway-cli/templates/vue/shared/types/: index.shadcn.hbs
tideway-cli/templates/vue/views/admin/: AdminDashboardView.shadcn.hbs  AdminLayout.shadcn.hbs  AdminOrganizationsView.shadcn.hbs  AdminUsersView.shadcn.hbs
tideway-cli/tests/: add_command_test.rs  backend_command_test.rs  doctor_command_test.rs  dx_golden_path_test.rs  error_contract_test.rs  init_command_test.rs  messaging_contract_test.rs  mixed_command_flow_conflict_test.rs  new_command_test.rs  plan_mode_mutating_commands_test.rs  resource_command_test.rs  scaffold_snapshot_test.rs  setup_command_test.rs
tideway-cli/tests/snapshots/: new_minimal__Cargo.toml.snap  new_minimal__src_main.rs.snap  new_minimal__tests_health.rs.snap  resource_wire__src_main.rs.snap  resource_wire__src_routes_mod.rs.snap  resource_wire__src_routes_todo.rs.snap
tideway-macros/: Cargo.toml
tideway-macros/src/: codegen.rs  inference.rs  lib.rs  parse.rs
(+257 files in other folders)
