[package]
name = "tideway-cli"
version = "0.1.14"
edition = "2024"
authors = ["JD"]
description = "CLI for scaffolding Tideway SaaS applications - backend modules, frontend components, and more"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jordcodes/tideway-rs"
readme = "README.md"
keywords = ["cli", "saas", "scaffold", "backend", "axum"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[[bin]]
name = "tideway"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
handlebars = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
include_dir = "0.7"
colored = "2"
anyhow = "1"
