[package]
name = "tideway-cli"
version = "0.1.28"
edition = "2024"
build = "build.rs"
authors = ["JD"]
description = "CLI for scaffolding Tideway SaaS applications - backend modules, frontend components, and more"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jordcodes/tideway-rs"
readme = "README.md"
keywords = ["cli", "saas", "scaffold", "backend", "axum"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[package.metadata]
tideway_version = "0.7.16"

[[bin]]
name = "tideway"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
handlebars = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
include_dir = "0.7"
colored = "2"
anyhow = "1"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
toml = "0.8"
