[package]
name = "tideway-cli"
version = "0.1.34"
edition = "2024"
build = "build.rs"
authors = ["JD"]
description = "CLI for scaffolding Tideway SaaS applications - backend modules, frontend components, and more"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jordcodes/tideway-rs"
readme = "README.md"
keywords = ["cli", "saas", "scaffold", "backend", "axum"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.88"

[package.metadata]
tideway_version = "0.7.21"

[[bin]]
name = "tideway"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
handlebars = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
toml = "0.8"
toml_edit = "0.22"
include_dir = "0.7"
colored = "2"
anyhow = "1"
dialoguer = "0.11"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
toml = "0.8"
