[package]
name = "tideway-macros"
version = "0.1.0"
edition = "2024"
authors = ["JD"]
description = "Proc macros for the Tideway web framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jordcodes/tideway-rs"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
# Core proc-macro dependencies
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"

# Attribute argument parsing
darling = "0.20"

# Dynamic crate name resolution
proc-macro-crate = "3.2"

[dev-dependencies]
trybuild = "1.0"
