[package]
name = "tideway-load-app"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
tideway = { path = "../..", default-features = false, features = ["auth", "database", "websocket"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
